# python-components

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-pypi.yml
python_components/: __init__.py  component.py  system.py
python_components/tests/: test_component.py  test_system.py
src/: component.py  system.py
src/tests/: test_component.py  test_system.py
